--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Connection url for the database "EmployeeManager_DB"
-spring.datasource.url = jdbc:mysql://localhost:3306/GestionCinema_DB
+spring.datasource.url = jdbc:mysql://localhost:3306/GestionCinema_DB?serverTimezone=UTC
 #server.port = 8080
 
 # Username and password
@@ -13,7 +13,7 @@ spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in the project
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
